<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    android:padding="6dp"
    android:background="@color/btn_background">

    <TextView
        android:id="@+id/dialog_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog_header"
        android:textSize="24sp"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/username"
        android:inputType="text"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@id/dialog_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:autofillHints="false" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/age"
        android:imeOptions="actionNext"
        android:autofillHints="false"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstName" />

    <CheckBox
        android:id="@+id/terms_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_agree"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/age"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginEnd="6dp"
        android:text="@string/dialog_submit"
        android:textColor="@color/text_color"
        android:background="@color/btn_background"
        app:layout_constraintTop_toBottomOf="@id/terms_cb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.3"/>

</androidx.constraintlayout.widget.ConstraintLayout>