<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_16sdp">

    <FrameLayout
        android:id="@+id/pictureContainer"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_55sdp"
        android:background="@drawable/background_new_chat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/profilePic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_new_chat" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toEndOf="@+id/pictureContainer"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_name"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:textColor="@color/btn_background"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/demoMessage"
        android:textColor="@color/btn_background"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/lastMessageTime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pictureContainer"
        app:layout_constraintTop_toTopOf="@id/name"
        app:layout_constraintVertical_bias="0.911" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lastMessageTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/time"
        android:textColor="@color/btn_background"
        android:textSize="@dimen/_18ssp" />

    <FrameLayout
        android:layout_width="@dimen/_29sdp"
        android:layout_height="@dimen/_29sdp"
        android:background="@drawable/background_unread_messages"
        android:layout_marginEnd="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/lastMessageTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/_2sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/numberOfUnreadMessages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/unreadMessage"
            android:gravity="center"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/text_color"
            />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>